# google-chat-mcp

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COLLAB-DESIGN.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  gcp-setup.md  runbook.md  security.md
migrations/: 001_init.sql
src/: __init__.py  app.py  chat_client.py  config.py  models.py  observability.py  rate_limit.py  server.py  stdio.py  storage.py
src/migrations/: 001_init.sql
src/resources/: __init__.py  _common.py  message.py  space.py  thread.py
src/tools/: __init__.py  _common.py  _directory.py  _messages.py  add_member.py  add_reaction.py  create_group_chat.py  create_space.py  delete_message.py  find_direct_message.py  get_message.py  get_messages.py  get_space.py  get_thread.py  list_members.py  list_reactions.py  list_spaces.py  remove_member.py  remove_reaction.py  search_messages.py  search_people.py  send_message.py  update_message.py  update_space.py  whoami.py
tests/: conftest.py  test_add_member.py  test_app.py  test_chat_client.py  test_config.py  test_create_group_chat.py  test_create_space.py  test_delete_message.py  test_get_message.py  test_get_thread.py  test_integration_https.py  test_integration_stdio.py  test_models.py  test_observability.py  test_rate_limit.py  test_reactions.py  test_remove_member.py  test_resource_space.py  test_search_messages.py  test_search_people.py  test_send_message.py  test_server.py  test_stdio.py  test_storage.py  test_tools.py  test_tools_common.py  test_update_message.py  test_update_space.py  test_whoami.py  test_wire_shapes.py
