[project]
name = "google-chat-mcp"
dynamic = ["version"]
description = "MCP server exposing Google Chat to MCP-compatible clients."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.15"
authors = [{ name = "Mark Medum Bundgaard" }]
keywords = ["mcp", "google-chat", "fastmcp", "oauth", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "fastmcp~=3.2",
    "pydantic~=2.13",
    "pydantic-settings~=2.14",
    "httpx~=0.28",
    "structlog~=25.5",
    "prometheus-client~=0.24",
    "py-key-value-aio[disk]~=0.4",
    "cryptography~=46.0",
    "aiosqlite~=0.21",
    "google-auth~=2.49",
    "google-auth-oauthlib~=1.2",
]

[project.optional-dependencies]
dev = [
    "ty==0.0.34",
    "ruff~=0.15",
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-cov~=7.0",
    "respx~=0.23",
    "pre-commit~=4.3",
    "pip-audit~=2.10",
]

[project.scripts]
# Primary name matches Anthropic's mcp-server-<name> reference-server
# convention (mcp-server-filesystem, mcp-server-github, ...). Alias kept for
# discoverability in docs and existing muscle memory.
mcp-server-google-chat = "src.stdio:main"
google-chat-mcp = "src.stdio:main"

[project.urls]
Homepage = "https://github.com/mmedum/google-chat-mcp"
Repository = "https://github.com/mmedum/google-chat-mcp"
Issues = "https://github.com/mmedum/google-chat-mcp/issues"
Changelog = "https://github.com/mmedum/google-chat-mcp/blob/main/CHANGELOG.md"
Documentation = "https://github.com/mmedum/google-chat-mcp#readme"

[build-system]
# hatchling >= 1.27 is the first version that emits Metadata 2.4 with
# PEP 639 `License-Expression` / `License-File` correctly; the `license`
# and `license-files` fields above depend on it.
requires = ["hatchling>=1.27", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------- ruff ----------

[tool.ruff]
line-length = 100
# Match the lowest supported minor so ruff's pyupgrade rules don't rewrite
# code to syntax unavailable on 3.12 (the lower bound in `requires-python`).
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Strict ruleset. Disable only rules that materially conflict with the project.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "PL",   # pylint
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "S",    # bandit
    "T20",  # flake8-print
    "ASYNC",
    "PT",   # pytest style
    "TID",  # tidy imports
]
ignore = [
    "PLR0913",  # too many args — tool handlers have legitimate signature breadth
    "PLR2004", # magic value — HTTP status codes are clearer than named constants here
    "S101",    # asserts in tests
    "S105",    # "token" substring in URL constants is not a hardcoded password
    "PLC0415", # allow deferred imports inside functions where they reduce import cost
    "E501",    # line length is enforced by the formatter, not the linter
    "TID252",  # relative imports within the `src` package are idiomatic
    "COM812",  # trailing-comma enforcement conflicts with the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "S105", "S106", "SLF001", "PLR6301"]
"src/migrations/**" = ["ALL"]
# stdio entry is a CLI — `print` is intentional for user-facing output
# (login URL, confirmation, error messages). Also relaxes bandit's
# urlopen / TCPServer warnings since the loopback + Google endpoints are
# the whole point of the flow.
"src/stdio.py" = ["T201", "S104", "S310", "PLR0911", "PLR0912", "PLR0915"]

[tool.ruff.format]
quote-style = "double"

# ---------- ty ----------
# ty is beta as of April 2026 (0.0.31); do NOT enable strict mode until 1.0 ships.
# Leaving the default diagnostic level in place is intentional.
#
# ty 0.0.x does not yet accept a user-configurable `[tool.ty]` block with the
# same shape as ruff; when 1.0 ships, move strict/src/rules config here.

# ---------- pytest ----------

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # respx emits a DeprecationWarning when httpx is patched in certain orders;
    # harmless and tracked upstream. Remove once respx drops it.
    "ignore::DeprecationWarning:respx.*",
    # pydantic-settings warns when secrets_dir (/run/secrets) doesn't exist —
    # expected in local/test environments where all secrets come from env vars.
    "ignore:directory.*does not exist:UserWarning",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
